[HS-65] - Hoàn thành API Login và Login Google
[HS-65] - Hoàn thành API Login và Login Google

--- a/.env
+++ b/.env
@@ -5,4 +5,4 @@ DB_DATABASE=huong_sen_restaurant
 DB_POST=6969
 # EMAIL_USERNAME=sutten2004@gmail.com
 # EMAIL_PASSWORD=wxgxhaksxsvdbhkj
-# JWT_SECRET=domteajwtauth2024
+JWT_SECRET_KEY=huongsenauth2024
