[HS-77] - Hoàn thành tạo chức năng quên mật khẩu, đổi mật khẩu trong API
[HS-77] - Hoàn thành tạo chức năng quên mật khẩu, đổi mật khẩu trong API

--- a/.env
+++ b/.env
@@ -3,6 +3,6 @@ DB_USER=root
 DB_PASSWORD=mysql
 DB_DATABASE=huong_sen_restaurant
 DB_POST=6969
-# EMAIL_USERNAME=sutten2004@gmail.com
-# EMAIL_PASSWORD=wxgxhaksxsvdbhkj
+EMAIL_USERNAME=sutten2004@gmail.com
+EMAIL_PASSWORD=qxhbwyrzthlvssbc
 JWT_SECRET_KEY=huongsenauth2024
