--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "force": "^0.0.3",
+    "huong-sen-restaurant-datn-server": "file:",
     "jsonwebtoken": "^9.0.2",
     "mysql": "^2.18.1",
     "natural": "^8.0.1",
