--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "force": "^0.0.3",
     "jsonwebtoken": "^9.0.2",
     "mysql": "^2.18.1",
+    "natural": "^8.0.1",
     "nodemailer": "^6.9.14",
     "nodemon": "^3.1.4"
   }
