[HS-176] - Hoàn thành tích hợp chức năng thanh toán MOMO
Hoàn thành tích hợp chức năng thanh toán MOMO

--- a/.env
+++ b/.env
@@ -6,3 +6,6 @@ DB_POST=6969
 EMAIL_USERNAME=sutten2004@gmail.com
 EMAIL_PASSWORD=qxhbwyrzthlvssbc
 JWT_SECRET_KEY=huongsenauth2024
+LOCAL_URL=https://6cea-116-108-101-5.ngrok-free.app #đổi đường local url 
+MOMO_ACCESSKEY= F8BBA842ECF85
+MOMO_SECRETKEY= K951B6PE1waDMi640xX08PD3vg6EkVlz
