[HS-253] - Chỉnh sửa yêu cầu thay đổi món, thống kê, mã khuyến mãi Admin, Client, Serve

--- a/.env
+++ b/.env
@@ -5,6 +5,7 @@ DB_DATABASE=huong_sen_restaurant
 DB_POST=6969
 EMAIL_USERNAME=sutten2004@gmail.com
 EMAIL_PASSWORD=qxhbwyrzthlvssbc
+EMAIL_EMPLOYYER=trangnqpc05335@fpt.edu.vn
 JWT_SECRET_KEY=huongsenauth2024
 LOCAL_URL=https://6cea-116-108-101-5.ngrok-free.app #đổi đường local url 
 MOMO_ACCESSKEY= F8BBA842ECF85
